[gd_scene load_steps=60 format=3 uid="uid://brnrrjstww3s4"]

[ext_resource type="Script" path="res://scenes/main_character.gd" id="1_nvhje"]
[ext_resource type="PackedScene" uid="uid://c502i23w0xg1k" path="res://scenes/particle.tscn" id="2_ivyyf"]
[ext_resource type="Texture2D" uid="uid://c52so222ka0yj" path="res://assets/MainCharacter/Idle (32x32).png" id="2_o2har"]
[ext_resource type="Texture2D" uid="uid://dit5i5pshv57q" path="res://assets/MainCharacter/Desappearing (96x96).png" id="2_v0qms"]
[ext_resource type="Texture2D" uid="uid://dvrxwcty3e55i" path="res://assets/MainCharacter/Double Jump (32x32).png" id="3_eyb0v"]
[ext_resource type="PackedScene" uid="uid://csujpumpyvh0n" path="res://scenes/appearing.tscn" id="3_mu7bk"]
[ext_resource type="Texture2D" uid="uid://m31cirilyjw8" path="res://assets/MainCharacter/Fall (32x32).png" id="3_t1hj8"]
[ext_resource type="Texture2D" uid="uid://dit4bqa0tm1ur" path="res://assets/MainCharacter/Jump (32x32).png" id="4_18mus"]
[ext_resource type="Texture2D" uid="uid://5qbud7u2tixs" path="res://assets/MainCharacter/Hit (32x32).png" id="5_4042q"]
[ext_resource type="Texture2D" uid="uid://62py5vgap5qa" path="res://assets/MainCharacter/Run (32x32).png" id="5_kivnf"]
[ext_resource type="AudioStream" uid="uid://dan582oirr1yg" path="res://assets/sounds/jump.mp3" id="6_1k6s1"]
[ext_resource type="AudioStream" uid="uid://ddk83bkx0rghe" path="res://assets/sounds/pick_up.mp3" id="12_32mua"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8hhlo"]
atlas = ExtResource("2_v0qms")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_cue1n"]
atlas = ExtResource("2_v0qms")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsgyh"]
atlas = ExtResource("2_v0qms")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_gb5te"]
atlas = ExtResource("2_v0qms")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_domtl"]
atlas = ExtResource("2_v0qms")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbmeh"]
atlas = ExtResource("2_v0qms")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdyug"]
atlas = ExtResource("2_v0qms")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_teqvp"]
atlas = ExtResource("2_o2har")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xi7td"]
atlas = ExtResource("2_o2har")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4w7tl"]
atlas = ExtResource("2_o2har")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5hiu"]
atlas = ExtResource("2_o2har")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtk82"]
atlas = ExtResource("2_o2har")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l43rj"]
atlas = ExtResource("2_o2har")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbnvc"]
atlas = ExtResource("2_o2har")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsfqq"]
atlas = ExtResource("2_o2har")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_so8yd"]
atlas = ExtResource("2_o2har")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f60cp"]
atlas = ExtResource("2_o2har")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s06pg"]
atlas = ExtResource("2_o2har")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rsbr"]
atlas = ExtResource("3_eyb0v")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2der"]
atlas = ExtResource("3_eyb0v")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0sjt"]
atlas = ExtResource("3_eyb0v")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8r24e"]
atlas = ExtResource("3_eyb0v")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ab1h5"]
atlas = ExtResource("3_eyb0v")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7bpm"]
atlas = ExtResource("3_eyb0v")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_spoqq"]
atlas = ExtResource("3_t1hj8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2blf"]
atlas = ExtResource("5_4042q")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_px1br"]
atlas = ExtResource("5_4042q")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fl0ch"]
atlas = ExtResource("5_4042q")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yc5yt"]
atlas = ExtResource("5_4042q")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rkm5"]
atlas = ExtResource("5_4042q")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kgah"]
atlas = ExtResource("5_4042q")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7opm"]
atlas = ExtResource("5_4042q")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkysr"]
atlas = ExtResource("4_18mus")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0rt0"]
atlas = ExtResource("5_kivnf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_chq76"]
atlas = ExtResource("5_kivnf")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdl8u"]
atlas = ExtResource("5_kivnf")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bpry"]
atlas = ExtResource("5_kivnf")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_46jo7"]
atlas = ExtResource("5_kivnf")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejbvf"]
atlas = ExtResource("5_kivnf")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3b411"]
atlas = ExtResource("5_kivnf")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yubo7"]
atlas = ExtResource("5_kivnf")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_svpd0"]
atlas = ExtResource("5_kivnf")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kesp"]
atlas = ExtResource("5_kivnf")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ebny"]
atlas = ExtResource("5_kivnf")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fff8e"]
atlas = ExtResource("5_kivnf")
region = Rect2(352, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jacn6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hhlo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cue1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vsgyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gb5te")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_domtl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbmeh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdyug")
}],
"loop": true,
"name": &"dead",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_teqvp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xi7td")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4w7tl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5hiu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtk82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l43rj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbnvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsfqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_so8yd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f60cp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s06pg")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rsbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2der")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0sjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8r24e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ab1h5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7bpm")
}],
"loop": false,
"name": &"double_jumping",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_spoqq")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2blf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_px1br")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fl0ch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yc5yt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rkm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kgah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7opm")
}],
"loop": true,
"name": &"hit",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkysr")
}],
"loop": true,
"name": &"jumping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0rt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chq76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdl8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bpry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46jo7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejbvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3b411")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yubo7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svpd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kesp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ebny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fff8e")
}],
"loop": true,
"name": &"running",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ao5ao"]
size = Vector2(44, 60)

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_nvhje")
particle = ExtResource("2_ivyyf")
appearing = ExtResource("3_mu7bk")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-0.5, -2.5)
scale = Vector2(2.09375, 2.09375)
sprite_frames = SubResource("SpriteFrames_jacn6")
animation = &"dead"
autoplay = "default"
frame_progress = 0.602202

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_ao5ao")

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_1k6s1")
volume_db = -15.0
pitch_scale = 1.3

[node name="BeingHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_1k6s1")
volume_db = -15.0
pitch_scale = 3.0

[node name="DeadSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_1k6s1")

[node name="AppearSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_32mua")
volume_db = -10.0
pitch_scale = 1.5
